15-11-2019/Lab-5
For Loop in Python:

>>> 
>>> for i in range(10):
...     print(i)
... 
0
1
2
3
4
5
6
7
8
9
>>> 
>>> 
>>> a=range(10)
>>> for i in a:
...     print(i)
... 
0
1
2
3
4
5
6
7
8
9
>>> 
>>> a=range(1,10)
>>> for i in a:
...     print(i)
... 
1
2
3
4
5
6
7
8
9
>>> 
>>> for i in a:
...     
... 
  File "<stdin>", line 3
    
    ^
IndentationError: expected an indented block
>>> 
>>> for i in a;
  File "<stdin>", line 1
    for i in a;
              ^
SyntaxError: invalid syntax
>>> 
>>> for i in range(2,10):
...     print(i)
... 
2
3
4
5
6
7
8
9
>>> 
>>> for i in range(1,20,2):
...     print(i)
... 
1
3
5
7
9
11
13
15
17
19
>>> 
>>> for i in range(1,100,9):
...     print(i)
... 
1
10
19
28
37
46
55
64
73
82
91
>>> 


